# code-review-system

./: .env.example  .gitignore  B10_COORDINATOR_SUMMARY.md  README.md  pyproject.toml
backend/: __init__.py  config.py  event_bus.py  llm_client.py  main.py  models.py
backend/agents/: __init__.py  base.py  bug.py  coordinator.py  security.py  specialist.py
backend/clients/: __init__.py  minimax.py
backend/routes/: health.py  streaming.py
docs/: AGENTS_REFACTOR_SUMMARY.md  AGENT_ARCHITECTURE.md  FRONTEND_CHECKLIST.md  FRONTEND_DESIGN.md  FRONTEND_IDE_IMPLEMENTATION.md  FRONTEND_INTEGRATION.md  IDE_STYLE_GUIDE.md  LANGGRAPH_IMPLEMENTATION_NOTES.md  MINIMAL_IDE_DESIGN.md  PROFESSIONAL_IDE_UI_COMPLETE.md  PROJECT_REQUIREMENTS.md  QUICK_REFERENCE.md  REALTIME_INTEGRATION_TEST_REPORT.md  REAL_TIME_QUICKSTART.md  REAL_TIME_TESTING_SUMMARY.md  STREAMING_EVENTS_SPEC.md  STREAMING_UI_ARCHITECTURE.md  STREAMING_UI_SUMMARY.md  TESTING_FINDINGS.md  UI_DELIVERY_SUMMARY.md
frontend/: ARCHITECTURE_DIAGRAMS.md  COMPONENT_REFERENCE.md  GETTING_STARTED.md  IDE_UI_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  VALIDATION_CHECKLIST.md  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  store.ts  types.ts
frontend/src/components/: AgentStatusPanel.tsx  CodeEditor.tsx  ExecutionPlanPanel.tsx  FindingsFeed.tsx  Header.tsx  (+8 more)
plan/: implementation_plan.md
tests/: BUILD_SUMMARY.md  conftest.py  run_event_bus_tests.py  test_agents.py  test_coordinator.py  test_event_bus.py  test_realtime_integration.py  validate_realtime_endpoints.py
(+3 files in other folders)
